tests/paczka1/fuzzy1/79089667.err
Error in line 8: zNJ S736 35,8
Error in line 15: otkyM1 S736 10,54
Error in line 13: zNJ A342 29,2
Error in line 9: 5THPQ S420 33,3
Error in line 16: pnq S420 22,4
Error in line 17: zNJ S420 0,8
Error in line 19: HeM61v S420 17,3
